refactor: JDK 17 문법으로 수정